--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -12,8 +12,8 @@ $font-path: "../assets/fonts";
 // To view all the possible Ionic variables, see:
 // http://ionicframework.com/docs/v2/theming/overriding-ionic-variables/
 
-$text-color:        #000;
-$background-color:  #fff;
+$text-color:        #FFFFFF;
+$background-color:  #242424;
 
 
 // Named Color Variables
@@ -25,7 +25,7 @@ $background-color:  #fff;
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    #488aff,
+  primary:    #9F6ACA,
   secondary:  #32db64,
   danger:     #f53d3d,
   light:      #f4f4f4,
