--- a/src/pages/welcome/welcome.scss
+++ b/src/pages/welcome/welcome.scss
@@ -26,7 +26,7 @@ page-welcome {
   }
 
   ion-content {
-    background-image: url('/assets/img/Fondo.jpg');
+    background-image: url('../assets/img/Fondo.jpg');
     // background: url('../assets/img/splashbg.png') no-repeat transparent;
     background-size: cover;
     height: 100%;
@@ -57,7 +57,7 @@ page-welcome {
   }
   .logo {
     margin: auto auto 5% auto;
-    background: url('assets/img/appicon.png') repeat transparent;
+    background: url('../assets/img/appicon.png') repeat transparent;
     background-size: 100%;
     width: 128px;
     height: 128px;
