--- a/src/pages/welcome/welcome.scss
+++ b/src/pages/welcome/welcome.scss
@@ -47,7 +47,7 @@ page-welcome {
     text-align: center;
   }
   .splash-logo {
-    background: url('../assets/img/appicon.png') repeat transparent;
+    background: url('/assets/img/appicon.png') repeat transparent;
     background-size: 100%;
     width: 128px;
     height: 128px;
@@ -57,7 +57,7 @@ page-welcome {
   }
   .logo {
     margin: auto auto 5% auto;
-    background: url('../assets/img/appicon.png') repeat transparent;
+    background: url('/assets/img/appicon.png') repeat transparent;
     background-size: 100%;
     width: 128px;
     height: 128px;
