fix fondo again

--- a/src/pages/welcome/welcome.scss
+++ b/src/pages/welcome/welcome.scss
@@ -26,7 +26,7 @@ page-welcome {
   }
 
   ion-content {
-    background-image: url('../assets/img/Fondo.jpg');
+    background-image: url('/assets/img/Fondo.jpg');
     // background: url('../assets/img/splashbg.png') no-repeat transparent;
     background-size: cover;
     height: 100%;
