--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -25,7 +25,7 @@ $background-color:  #242424;
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    #9F6ACA,
+  primary:    rgb(192, 0, 128),
   secondary:  #32db64,
   danger:     #f53d3d,
   light:      #f4f4f4,
